// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render fontawesome 1`] = `
<i
  aria-hidden="true"
  className="fa fa-bars"
  focusable="false"
  title={null}
/>
`;

exports[`Icon should render from custom font 1`] = `
<i
  aria-hidden="true"
  className="icon-test"
  focusable="false"
  title={null}
/>
`;

exports[`Icon should render from svg 1`] = `
<svg
  aria-hidden="true"
  className="tc-svg-icon tc-svg-icon"
  focusable="false"
  title={null}
>
  <use
    xlinkHref="#svg-dd"
  />
</svg>
`;

exports[`Icon should render with provided className 1`] = `
<svg
  aria-hidden="true"
  className="tc-svg-icon tc-svg-icon custom-class"
  focusable="false"
  title={null}
>
  <use
    xlinkHref="#svg-dd"
  />
</svg>
`;
